exposing database ports

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
   postgres:
     image: postgres:15
     restart: unless-stopped
+    ports:
+      - "5432:5432"
     env_file:
       - .env
     environment:
@@ -52,6 +54,8 @@ services:
     image: mongo:6
     container_name: mongo
     restart: unless-stopped
+    ports:
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
