mounted uploads folder with the host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "3000:3000"
     env_file:
       - .env
+    volumes:
+      - uploads:/app/uploads
     depends_on:
       postgres:
         condition: service_healthy
@@ -79,6 +81,8 @@ services:
 volumes:
   pg_data:
   mongo_data:
+  uploads:
+
 
 networks:
   app-network:
