--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^22.13.10",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/pdfkit": "^0.13.9",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.22.0",
@@ -58,7 +59,9 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.1",
     "razorpay": "^2.9.6",
+    "resend": "^4.5.1",
     "zod": "^3.24.3"
   }
 }
